<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalculatorImtFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imt"
        android:textSize="20sp"
        android:padding="16dp"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editTextWeight"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:layout_marginVertical="12dp"
        android:hint="@string/enterWeight"/>

    <EditText
        android:id="@+id/editTextHeight"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="12dp"
        android:hint="@string/enterHeight"/>

    <Spinner
        android:id="@+id/spinnerPatients"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:paddingVertical="12dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/buttonMakeCalculate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/makeCalculate"
        android:backgroundTint="@color/blue"
        android:textSize="16sp"
        android:layout_marginVertical="12dp"/>

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00.0"
        android:textSize="20sp"
        android:padding="16dp"
        android:layout_gravity="center"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="16dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imtInfo"
            android:textSize="20sp" />
    </ScrollView>

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:backgroundTint="@color/blue"
        android:textSize="16sp"
        android:padding="16dp"
        android:layout_marginVertical="12dp"/>

</LinearLayout>