<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalculateFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        app:titleTextColor="@color/white"
        app:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar"
        app:title="@string/calculators" />

    <Button
        android:id="@+id/buttonIMT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/blue"
        android:paddingVertical="16dp"
        android:textSize="16sp"
        android:text="@string/imt"/>

    <Button
        android:id="@+id/buttonRateInfusionDrug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="12dp"
        android:backgroundTint="@color/blue"
        android:paddingVertical="16dp"
        android:textSize="16sp"
        android:text="@string/rateInfusionDrug"/>

    <Button
        android:id="@+id/buttonPotassiumDeficiency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="12dp"
        android:backgroundTint="@color/blue"
        android:paddingVertical="16dp"
        android:textSize="16sp"
        android:text="@string/potassiumDeficiency"/>

    <Button
        android:id="@+id/buttonRateOfIntravenousDripAdministrationDrug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="12dp"
        android:backgroundTint="@color/blue"
        android:paddingVertical="16dp"
        android:textSize="16sp"
        android:text="@string/rateOfIntravenousDripAdministrationDrug"/>

</LinearLayout>